# evbindkeys

./: .gitignore  Cargo.toml  README.md  example.toml
.github/workflows/: build.yml  release.yml
src/: config.rs  main.rs
